Colab を使用して作成されました

--- a/docs/class_01.ipynb
+++ b/docs/class_01.ipynb
@@ -15,7 +15,7 @@
         "id": "UbkbttwKRTgl"
       },
       "source": [
-        "# MNISTデータセットの学習\n",
+        "# ニューラルネットワークを用いたMNISTデータセットの学習\n",
         "\n",
         "## 目次\n",
         "\n",
@@ -36,10 +36,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "ニューラルネットワークは、ChatGPTや画像生成AIなどの基盤となる技術です。\n",
-        "\n",
-        "その基本原理は、関数近似に基づいており、複雑な関数を近似できるのが特徴です。\n",
-        "\n",
+        "ニューラルネットワークは、ChatGPTや画像生成AIなどの基盤となる技術です。  \n",
+        "その基本原理は、関数近似に基づいており、複雑な関数を近似できるのが特徴です。  \n",
         "この章では、ニューラルネットワークで関数近似を行う簡単な例を紹介します。\n",
         "\n",
         "ニューラルネットワークの学習は以下の流れで行います。\n",
@@ -56,17 +54,239 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### データセットの作成"
+        "本題に入る前に本日使用するライブラリをimportします。"
+      ],
+      "metadata": {
+        "id": "qgTb548WiIW8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "import torch.nn.init as init\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "metadata": {
+        "id": "hcFX_ldXiHFE"
+      },
+      "execution_count": 61,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1-1.データセットの作成"
       ],
       "metadata": {
         "id": "Q9GyIY_-e3FI"
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "ニューラルネットワークの学習に用いるデータセットを作成します。今回の例ではy=2x+3の関数近似をします。"
+      ],
+      "metadata": {
+        "id": "47NaEJFhix0T"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a = 2  # 傾き\n",
+        "b = 1  # 切片\n",
+        "x_train = np.linspace(0, 9, 10)  # 0から10までの100個のデータ点を生成\n",
+        "y_train = a * x_train + b  # 真の線形関数"
+      ],
       "metadata": {
         "id": "Qvb3Hr-weCGy"
+      },
+      "execution_count": 68,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train"
+      ],
+      "metadata": {
+        "id": "hZghaA1njCzW",
+        "outputId": "e7ca0ce5-cd54-4023-e004-b72cbbc551e8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0., 1., 2., 3., 4., 5., 6., 7., 8., 9.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_train"
+      ],
+      "metadata": {
+        "id": "2oVGvaTajEmq",
+        "outputId": "f914fce7-471f-48ec-b948-89db4d8f547c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1.,  3.,  5.,  7.,  9., 11., 13., 15., 17., 19.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "データ型をNumpyのarrayからPyTorchのtensorに変換します。PyTorchの処理の都合上、view(-1, 1)を使って形状を(10, 1)にします。"
+      ],
+      "metadata": {
+        "id": "twJaS11vjsHT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Tensorに変換\n",
+        "x_train = torch.tensor(x_train, dtype=torch.float32).view(-1, 1)  # (10, 1) の形に\n",
+        "y_train = torch.tensor(y_train, dtype=torch.float32).view(-1, 1)  # (10, 1) の形に"
+      ],
+      "metadata": {
+        "id": "_lSIJdv2jscm"
+      },
+      "execution_count": 72,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train"
+      ],
+      "metadata": {
+        "id": "QaBVAfh_kQcg",
+        "outputId": "ae833ecc-6ee6-4ec5-e4c0-2bb87ec2ceec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.],\n",
+              "        [1.],\n",
+              "        [2.],\n",
+              "        [3.],\n",
+              "        [4.],\n",
+              "        [5.],\n",
+              "        [6.],\n",
+              "        [7.],\n",
+              "        [8.],\n",
+              "        [9.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_train"
+      ],
+      "metadata": {
+        "id": "W69ALx87kRqO",
+        "outputId": "2093eb78-d56e-4cac-dc3c-48db2b2e9fb8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 1.],\n",
+              "        [ 3.],\n",
+              "        [ 5.],\n",
+              "        [ 7.],\n",
+              "        [ 9.],\n",
+              "        [11.],\n",
+              "        [13.],\n",
+              "        [15.],\n",
+              "        [17.],\n",
+              "        [19.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 74
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1-2.モデルの作成"
+      ],
+      "metadata": {
+        "id": "Ucz-ckOGkdoE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ニューラルネットワークを作成します。  \n",
+        "self.linear=nn.Linear(入力サイズ, 出力サイズ)は(出力サイズ$\\times$入力サイズ)の重み行列$\\mathbf{A}$と(出力サイズ)のバイアスベクトル$b$を生成します。  \n",
+        "そして(入力サイズ)のベクトルxを入力した際、self.linear(x)は$\\mathbf{A}x+b$を返します。"
+      ],
+      "metadata": {
+        "id": "QXtjOG9SlwBN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class LinearRegressionModel(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super(LinearRegressionModel, self).__init__()\n",
+        "        self.linear = nn.Linear(1, 1)  # 入力1、出力1の線形層\n",
+        "        init.constant_(self.linear.weight, 0)  # 重みAをすべて0に初期化\n",
+        "        init.constant_(self.linear.bias, 0)    # バイアスbをすべて0に初期化\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        return self.linear(x)"
+      ],
+      "metadata": {
+        "id": "IayH_46Ykqzy"
       },
       "execution_count": null,
       "outputs": []
@@ -147,11 +367,11 @@
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
-        "id": "pf7Pb9lsRTgm",
-        "outputId": "3dad7dfa-7d47-49c0-845e-80722dae0528",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pf7Pb9lsRTgm",
+        "outputId": "3dad7dfa-7d47-49c0-845e-80722dae0528"
       },
       "outputs": [
         {
@@ -223,12 +443,12 @@
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
-        "id": "fTFORUMQRTgn",
-        "outputId": "606c03b9-c817-4bc1-9331-5392caf3ce2a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 209
-        }
+        },
+        "id": "fTFORUMQRTgn",
+        "outputId": "606c03b9-c817-4bc1-9331-5392caf3ce2a"
       },
       "outputs": [
         {
@@ -321,11 +541,11 @@
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
-        "id": "QE857_JvRTgp",
-        "outputId": "11fbc86a-37b3-477e-f6dd-8c001efe7d10",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QE857_JvRTgp",
+        "outputId": "11fbc86a-37b3-477e-f6dd-8c001efe7d10"
       },
       "outputs": [
         {
@@ -372,11 +592,11 @@
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {
-        "id": "i_0CJFABRTgq",
-        "outputId": "4e97b1ea-cdc2-4a56-8113-e753b8ce21bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "i_0CJFABRTgq",
+        "outputId": "4e97b1ea-cdc2-4a56-8113-e753b8ce21bf"
       },
       "outputs": [
         {
@@ -424,11 +644,11 @@
       "cell_type": "code",
       "execution_count": 6,
       "metadata": {
-        "id": "i812vxPkRTgr",
-        "outputId": "eac7ce6f-3949-4945-86a9-baecfe587d96",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "i812vxPkRTgr",
+        "outputId": "eac7ce6f-3949-4945-86a9-baecfe587d96"
       },
       "outputs": [
         {
@@ -477,12 +697,12 @@
       "cell_type": "code",
       "execution_count": 7,
       "metadata": {
-        "id": "ICTQH-DNRTgs",
-        "outputId": "88ff2a27-46ee-4db2-cf93-0442d3236a72",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 449
-        }
+        },
+        "id": "ICTQH-DNRTgs",
+        "outputId": "88ff2a27-46ee-4db2-cf93-0442d3236a72"
       },
       "outputs": [
         {
@@ -571,11 +791,11 @@
       "cell_type": "code",
       "execution_count": 9,
       "metadata": {
-        "id": "rmISu7WkRTgu",
-        "outputId": "04314128-7d60-48a6-e3f4-e56c211dcef5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rmISu7WkRTgu",
+        "outputId": "04314128-7d60-48a6-e3f4-e56c211dcef5"
       },
       "outputs": [
         {
@@ -701,11 +921,11 @@
       "cell_type": "code",
       "execution_count": 11,
       "metadata": {
-        "id": "jKxYZSUmRTgw",
-        "outputId": "81e57abc-681c-4f58-8913-64b59d893c3d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jKxYZSUmRTgw",
+        "outputId": "81e57abc-681c-4f58-8913-64b59d893c3d"
       },
       "outputs": [
         {
@@ -773,12 +993,12 @@
       "cell_type": "code",
       "execution_count": 12,
       "metadata": {
-        "id": "rE1RaHA9RTgx",
-        "outputId": "5ed1b066-8611-4450-8141-526d5ab7ab76",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 209
-        }
+        },
+        "id": "rE1RaHA9RTgx",
+        "outputId": "5ed1b066-8611-4450-8141-526d5ab7ab76"
       },
       "outputs": [
         {
@@ -842,11 +1062,11 @@
       "cell_type": "code",
       "execution_count": 14,
       "metadata": {
-        "id": "4DKuysY8RTgy",
-        "outputId": "1ac0e68b-b44d-4bd3-9caa-8bc2af009093",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4DKuysY8RTgy",
+        "outputId": "1ac0e68b-b44d-4bd3-9caa-8bc2af009093"
       },
       "outputs": [
         {
@@ -878,11 +1098,11 @@
       "cell_type": "code",
       "execution_count": 15,
       "metadata": {
-        "id": "evBBg5LNRTgz",
-        "outputId": "be9e8c35-316e-4653-f3ab-2820b89c0618",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "evBBg5LNRTgz",
+        "outputId": "be9e8c35-316e-4653-f3ab-2820b89c0618"
       },
       "outputs": [
         {
@@ -924,11 +1144,11 @@
       "cell_type": "code",
       "execution_count": 16,
       "metadata": {
-        "id": "C2vZ-5VkRTgz",
-        "outputId": "1aaffa04-fa29-4d66-ddd0-f50591cc54fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "C2vZ-5VkRTgz",
+        "outputId": "1aaffa04-fa29-4d66-ddd0-f50591cc54fd"
       },
       "outputs": [
         {
@@ -1006,11 +1226,11 @@
       "cell_type": "code",
       "execution_count": 18,
       "metadata": {
-        "id": "pMR-c2suRTg_",
-        "outputId": "5d8fbea2-737e-4d4c-de5b-c7a05d07f519",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pMR-c2suRTg_",
+        "outputId": "5d8fbea2-737e-4d4c-de5b-c7a05d07f519"
       },
       "outputs": [
         {
@@ -1054,11 +1274,11 @@
       "cell_type": "code",
       "execution_count": 19,
       "metadata": {
-        "id": "STjcdL0URThA",
-        "outputId": "8ba393dd-ca59-40ac-9a4d-99f6a5b4a4e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "STjcdL0URThA",
+        "outputId": "8ba393dd-ca59-40ac-9a4d-99f6a5b4a4e2"
       },
       "outputs": [
         {
@@ -1140,8 +1360,8 @@
         "    def __init__(self):\n",
         "        super(LinearRegressionModel, self).__init__()\n",
         "        self.linear = nn.Linear(1, 1)  # 入力1、出力1の線形層\n",
-        "        init.constant_(self.linear.weight, 0)  # 重みをすべて2に初期化\n",
-        "        init.constant_(self.linear.bias, 0)    # バイアスをすべて3に初期化\n",
+        "        init.constant_(self.linear.weight, 0)  # 重みをすべて0に初期化\n",
+        "        init.constant_(self.linear.bias, 0)    # バイアスをすべて0に初期化\n",
         "\n",
         "    def forward(self, x):\n",
         "        return self.linear(x)\n",
@@ -1187,12 +1407,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "_DpezGxdTK5V",
-        "outputId": "baa7201c-77fe-441c-93f6-55e87cd33ff1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 430
-        }
+        },
+        "id": "_DpezGxdTK5V",
+        "outputId": "baa7201c-77fe-441c-93f6-55e87cd33ff1"
       },
       "execution_count": 60,
       "outputs": [
