--- a/docs/class_01.ipynb
+++ b/docs/class_01.ipynb
@@ -114,11 +114,11 @@
         "x_train"
       ],
       "metadata": {
-        "id": "hZghaA1njCzW",
-        "outputId": "e7ca0ce5-cd54-4023-e004-b72cbbc551e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hZghaA1njCzW",
+        "outputId": "e7ca0ce5-cd54-4023-e004-b72cbbc551e8"
       },
       "execution_count": 69,
       "outputs": [
@@ -140,11 +140,11 @@
         "y_train"
       ],
       "metadata": {
-        "id": "2oVGvaTajEmq",
-        "outputId": "f914fce7-471f-48ec-b948-89db4d8f547c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2oVGvaTajEmq",
+        "outputId": "f914fce7-471f-48ec-b948-89db4d8f547c"
       },
       "execution_count": 70,
       "outputs": [
@@ -188,11 +188,11 @@
         "x_train"
       ],
       "metadata": {
-        "id": "QaBVAfh_kQcg",
-        "outputId": "ae833ecc-6ee6-4ec5-e4c0-2bb87ec2ceec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QaBVAfh_kQcg",
+        "outputId": "ae833ecc-6ee6-4ec5-e4c0-2bb87ec2ceec"
       },
       "execution_count": 73,
       "outputs": [
@@ -223,11 +223,11 @@
         "y_train"
       ],
       "metadata": {
-        "id": "W69ALx87kRqO",
-        "outputId": "2093eb78-d56e-4cac-dc3c-48db2b2e9fb8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "W69ALx87kRqO",
+        "outputId": "2093eb78-d56e-4cac-dc3c-48db2b2e9fb8"
       },
       "execution_count": 74,
       "outputs": [
@@ -283,10 +283,80 @@
         "        init.constant_(self.linear.bias, 0)    # バイアスbをすべて0に初期化\n",
         "\n",
         "    def forward(self, x):\n",
-        "        return self.linear(x)"
+        "        return self.linear(x)\n",
+        "\n",
+        "# モデルのインスタンスを作成\n",
+        "model = LinearRegressionModel()"
       ],
       "metadata": {
         "id": "IayH_46Ykqzy"
+      },
+      "execution_count": 75,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "重みAとバイアスbをどちらも0にしたので0x+0となり入力に関わらず出力は0になります。"
+      ],
+      "metadata": {
+        "id": "w490q3wxpZWr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model(torch.Tensor([1]))"
+      ],
+      "metadata": {
+        "id": "BlNetiMHpFRQ",
+        "outputId": "4785d185-1533-4857-b80c-a532aafcfb2c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0.], grad_fn=<ViewBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 82
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###1-3. 損失関数, 最適化関数の定義"
+      ],
+      "metadata": {
+        "id": "FA7Bdwwmq3-R"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "損失関数としてMSELoss (Mean squared error, 平均二乗誤差)を使用します。  \n",
+        "また最適化関数としてSGD (Stochastic gradient descent, 確率的勾配降下法)を使用します。"
+      ],
+      "metadata": {
+        "id": "vK7v5LGYrRv9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 3. 損失関数とオプティマイザの定義\n",
+        "criterion = nn.MSELoss()  # 平均二乗誤差を損失関数として使用\n",
+        "optimizer = optim.SGD(model.parameters(), lr=0.01)"
+      ],
+      "metadata": {
+        "id": "2C9khvF8q4VA"
       },
       "execution_count": null,
       "outputs": []
@@ -298,7 +368,7 @@
       },
       "source": [
         "まず、本日の演習で使用するライブラリをインポートします。\\\n",
-        "今回の演習では`pytorch`と呼ばれるライブラリを使用してニューララルネットワークの実装を行います。"
+        "今回の演習では`pytorch`と呼ばれるライブラリを使用してニューラルネットワークの実装を行います。"
       ]
     },
     {
@@ -1412,9 +1482,9 @@
           "height": 430
         },
         "id": "_DpezGxdTK5V",
-        "outputId": "baa7201c-77fe-441c-93f6-55e87cd33ff1"
+        "outputId": "02533620-b23b-4de8-a873-3d63ba9643d4"
       },
-      "execution_count": 60,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "display_data",
