Colab を使用して作成されました

--- a/docs/class_01.ipynb
+++ b/docs/class_01.ipynb
@@ -309,11 +309,11 @@
         "model(torch.Tensor([1]))"
       ],
       "metadata": {
-        "id": "BlNetiMHpFRQ",
-        "outputId": "4785d185-1533-4857-b80c-a532aafcfb2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BlNetiMHpFRQ",
+        "outputId": "4785d185-1533-4857-b80c-a532aafcfb2c"
       },
       "execution_count": 82,
       "outputs": [
@@ -341,6 +341,7 @@
     {
       "cell_type": "markdown",
       "source": [
+        "詳細は後述しますが  \n",
         "損失関数としてMSELoss (Mean squared error, 平均二乗誤差)を使用します。  \n",
         "また最適化関数としてSGD (Stochastic gradient descent, 確率的勾配降下法)を使用します。"
       ],
@@ -351,9 +352,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# 3. 損失関数とオプティマイザの定義\n",
         "criterion = nn.MSELoss()  # 平均二乗誤差を損失関数として使用\n",
-        "optimizer = optim.SGD(model.parameters(), lr=0.01)"
+        "optimizer = optim.SGD(model.parameters(), lr=0.01) # 確率的勾配降下法を最適化関数として使用"
       ],
       "metadata": {
         "id": "2C9khvF8q4VA"
