Colab を使用して作成されました

--- a/docs/class_01.ipynb
+++ b/docs/class_01.ipynb
@@ -266,7 +266,8 @@
       "source": [
         "ニューラルネットワークを作成します。  \n",
         "self.linear=nn.Linear(入力サイズ, 出力サイズ)は(出力サイズ$\\times$入力サイズ)の重み行列$\\mathbf{A}$と(出力サイズ)のバイアスベクトル$b$を生成します。  \n",
-        "そして(入力サイズ)のベクトルxを入力した際、self.linear(x)は$\\mathbf{A}x+b$を返します。"
+        "そして(入力サイズ)のベクトルxを入力した際、self.linear(x)は$\\mathbf{A}x+b$を返します。  \n",
+        "今回は入力サイズも出力サイズも1なので$y=ax+b$とかけます。"
       ],
       "metadata": {
         "id": "QXtjOG9SlwBN"
@@ -297,7 +298,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "重みAとバイアスbをどちらも0にしたので0x+0となり入力に関わらず出力は0になります。"
+        "重みaとバイアスbをどちらも0にしたのでモデルはy=0x+0=0となり、入力に関わらず出力は0になります。"
       ],
       "metadata": {
         "id": "w490q3wxpZWr"
@@ -358,32 +359,88 @@
       "metadata": {
         "id": "2C9khvF8q4VA"
       },
+      "execution_count": 84,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1-4. モデルの学習"
+      ],
+      "metadata": {
+        "id": "TN_eR9GlsY4K"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "epochsで指定した回数だけ、モデルの学習を行います。  \n",
+        "モデルの学習で重要なのが損失関数と最適化関数です。"
+      ],
+      "metadata": {
+        "id": "l2Zj8os2vkoL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "epochs = 5\n",
+        "for epoch in range(epochs):\n",
+        "    # モデルの予測\n",
+        "    y_pred = model(x_train)\n",
+        "\n",
+        "    # 損失の計算\n",
+        "    loss = criterion(y_pred, y_train)\n",
+        "\n",
+        "    # 勾配の初期化\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "    # バックプロパゲーション\n",
+        "    loss.backward()\n",
+        "\n",
+        "    # 重みの更新\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    # 損失を表示\n",
+        "    print(f'Epoch [{epoch+1}/{epochs}], Loss: {loss.item():.4f}')"
+      ],
+      "metadata": {
+        "id": "Krp3FeYHvjMf"
+      },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "qtDQUFZGRTgl"
-      },
       "source": [
-        "まず、本日の演習で使用するライブラリをインポートします。\\\n",
-        "今回の演習では`pytorch`と呼ばれるライブラリを使用してニューラルネットワークの実装を行います。"
-      ]
+        "#### 損失関数について\n",
+        "平均二乗誤差を使ったlossはニューラルネットワークの出力y_predと正解データy_trainを用いて  \n",
+        "$\\text{loss}=(\\text{y_pred}-\\text{y_train})^2$  \n",
+        "で計算されます。  \n",
+        "例としてx=0のときy=2x+1の正解データはy_train=1です。しかしモデルの出力はy_pred=0だったとします。このときlossは$\\text{loss}=(0-1)^2=1$となります。モデルはlossができるだけ小さくなるように学習を行います。"
+      ],
+      "metadata": {
+        "id": "R_0SsKxctOpA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 最適化関数について\n",
+        "lossを小さくするために、モデルは$y=ax+b$の$a$と$b$をそれぞれ大きくするべきか、小さくするべきか知りたいです。"
+      ],
+      "metadata": {
+        "id": "k9DyAzj2vcBq"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "source": [],
       "metadata": {
-        "id": "HVO367LjRTgl"
+        "id": "21PH4hy7sfVP"
       },
-      "outputs": [],
-      "source": [
-        "## Pytorch関連ライブラリ\n",
-        "import torch\n",
-        "import torchvision\n",
-        "import torchvision.transforms as transforms"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -515,7 +572,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 209
+          "height": 208
         },
         "id": "fTFORUMQRTgn",
         "outputId": "606c03b9-c817-4bc1-9331-5392caf3ce2a"
@@ -769,7 +826,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 449
+          "height": 448
         },
         "id": "ICTQH-DNRTgs",
         "outputId": "88ff2a27-46ee-4db2-cf93-0442d3236a72"
@@ -1065,7 +1122,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 209
+          "height": 208
         },
         "id": "rE1RaHA9RTgx",
         "outputId": "5ed1b066-8611-4450-8141-526d5ab7ab76"
