Colab を使用して作成されました

--- a/docs/class_01.ipynb
+++ b/docs/class_01.ipynb
@@ -346,11 +346,11 @@
         "model(torch.Tensor([[0], [1], [2], [3]])) # x=0からx=3までを入力した結果をまとめて確認することもできます"
       ],
       "metadata": {
-        "id": "Mfak02ryu9x-",
-        "outputId": "dee51d5e-3014-4508-9a8c-f95840f16bc6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Mfak02ryu9x-",
+        "outputId": "dee51d5e-3014-4508-9a8c-f95840f16bc6"
       },
       "execution_count": 53,
       "outputs": [
@@ -874,6 +874,7 @@
         "これをミニバッチと呼び、ロードするデータ数をバッチサイズと呼びます。\n",
         "\n",
         "<img src=\"https://github.com/ArtIC-TITECH/b3-proj-2023/blob/main/resources/class_01/minibatch_gd.webp?raw=1\" width=\"10%\">\n",
+        "<img src=\"https://github.com/ArtIC-TITECH/b3-proj-2023/blob/main/resources/class_01/batch_gd.png?raw=1\" width=\"10%\">\n",
         "\n",
         "pytorchでは、こうしたバッチ処理を`DataLoader`というクラスを用いて行います。\\\n",
         "`DataLoader`は`batch_size`という引数で一度に読み出すデータの数を指定することができます。"
