--- a/docs/class_01.ipynb
+++ b/docs/class_01.ipynb
@@ -12,7 +12,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 演習の予定  \n",
+        "# 演習について"
+      ],
+      "metadata": {
+        "id": "e13nKATZWJ1i"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 演習の予定  \n",
         "第一回：ニューラルネットワークを用いたMNISTデータセットの学習  \n",
         "第二回：過学習について、量子化によるモデルの軽量化  \n",
         "第三回：取り組むテーマの決定とそれぞれの実験  \n",
@@ -20,6 +29,28 @@
       ],
       "metadata": {
         "id": "iP-lzStFjGmz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 取り組むテーマの例\n",
+        "### 精度改善\n",
+        "- データ拡張手法の比較\n",
+        "- 適切な学習率とバッチサイズの決定方法\n",
+        "- 全結合層と畳み込み層の比較\n",
+        "\n",
+        "### モデルのパラメータ数削減\n",
+        "- 適切な量子化パラメータの決定方法\n",
+        "\n",
+        "### その他\n",
+        "- オートエンコーダによるMNISTのデノイジング\n",
+        "- オートエンコーダによるMNISTの次元削減\n",
+        "- 敵対的サンプルへの耐性評価\n",
+        "- MNISTでのアンサンブル学習の評価"
+      ],
+      "metadata": {
+        "id": "Xsaf5qm5WQOW"
       }
     },
     {
