--- a/docs/class_02.ipynb
+++ b/docs/class_02.ipynb
@@ -10,6 +10,46 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 本日の内容"
+      ],
+      "metadata": {
+        "id": "7RMa249PSwUy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 目次\n",
+        "1. 過学習について\n",
+        "1. パラメータの数え方\n",
+        "1. 量子化によるモデルの軽量化\n",
+        "1. 枝刈りによるモデルの軽量化"
+      ],
+      "metadata": {
+        "id": "9N8a-GF9UBhC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 1. 過学習について"
+      ],
+      "metadata": {
+        "id": "uuKn0_fRTJX4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1-0.ライブラリのインポート"
+      ],
+      "metadata": {
+        "id": "yODd3bEHUGqI"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import torch\n",
@@ -26,8 +66,17 @@
       "metadata": {
         "id": "F3t0CKaLKbtf"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1-1.データセットの作成"
+      ],
+      "metadata": {
+        "id": "ED7d2xjAUQhv"
+      }
     },
     {
       "cell_type": "code",
@@ -53,8 +102,17 @@
       "metadata": {
         "id": "Oiy3BkBDP8-G"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1-2.モデルの作成"
+      ],
+      "metadata": {
+        "id": "1nNHORhqUZpJ"
+      }
     },
     {
       "cell_type": "code",
@@ -81,8 +139,17 @@
       "metadata": {
         "id": "twQemZAhP-jA"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1-3. 損失関数, 最適化関数の定義"
+      ],
+      "metadata": {
+        "id": "YGR_5xOxUgJl"
+      }
     },
     {
       "cell_type": "code",
@@ -94,8 +161,27 @@
       "metadata": {
         "id": "bP99AepDQADz"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1-4. モデルの学習"
+      ],
+      "metadata": {
+        "id": "6zXwjKwGUml2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "モデルを30エポック訓練します。  \n",
+        "各エポックでの訓練損失, テスト損失, 訓練精度, テスト精度を取得します。"
+      ],
+      "metadata": {
+        "id": "evX9NQ_QUoGb"
+      }
     },
     {
       "cell_type": "code",
@@ -118,20 +204,15 @@
         "    for images, labels in train_loader:\n",
         "        # モデルの予測\n",
         "        outputs = model(images)\n",
-        "\n",
         "        # 損失の計算\n",
         "        loss = criterion(outputs, labels)\n",
         "        loss_sum += loss.item()\n",
-        "\n",
         "        # 勾配の初期化\n",
         "        optimizer.zero_grad()\n",
-        "\n",
         "        # バックプロパゲーション\n",
         "        loss.backward()\n",
-        "\n",
         "        # オプティマイザの更新\n",
         "        optimizer.step()\n",
-        "\n",
         "        # 精度の計算\n",
         "        _, predicted = torch.max(outputs.data, 1)\n",
         "        total_train += labels.size(0)\n",
@@ -180,7 +261,7 @@
         "id": "xT9a4qAWjacF",
         "outputId": "cfa5aea8-2341-4f57-ccb3-e94f876de106"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,6 +362,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 1-5. 過学習について"
+      ],
+      "metadata": {
+        "id": "EnYGFERmVZsm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "以下のセルは各エポックでの訓練損失, テスト損失, 訓練精度, テスト精度をプロットするものです。"
+      ],
+      "metadata": {
+        "id": "oFX8GPTFVsDX"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# 訓練とテストの損失をプロット\n",
@@ -316,7 +415,7 @@
         "id": "TVR4OTZAjTQI",
         "outputId": "ce57a27b-9db5-4026-85c5-70d9dd757b64"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -329,6 +428,44 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "左がLossで右が精度です。  \n",
+        "訓練(青)とテスト(オレンジ)を比較するとLossも精度も訓練(青)のほうが良好です。  \n",
+        "この差は過学習によるものです。過学習はモデルが訓練データに適応しすぎる現象です。"
+      ],
+      "metadata": {
+        "id": "MjR5yQd1WRFb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2. パラメータの数え方"
+      ],
+      "metadata": {
+        "id": "6vN7MXrCYKxZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "POWMDff7YKQB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3tp4aoEMX8gH"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
