Colab を使用して作成されました

--- a/docs/theme_A.ipynb
+++ b/docs/theme_A.ipynb
@@ -12,7 +12,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 最適化関数でのMomentumの評価"
+        "# 最適化関数におけるMomentumの評価"
       ],
       "metadata": {
         "id": "rvmqO6d0Zagd"
@@ -109,12 +109,12 @@
         "fig.show()\n"
       ],
       "metadata": {
-        "id": "lE-4mcnsdqtj",
-        "outputId": "b43c93e9-3968-4203-972e-e55575ad50f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 617
-        }
+        },
+        "id": "lE-4mcnsdqtj",
+        "outputId": "b43c93e9-3968-4203-972e-e55575ad50f7"
       },
       "execution_count": 10,
       "outputs": [
@@ -249,12 +249,12 @@
         "fig.show()\n"
       ],
       "metadata": {
-        "id": "SciQjGFXeSmM",
-        "outputId": "da8c1b2f-6f3f-4d89-cc38-b4df231c165b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 617
-        }
+        },
+        "id": "SciQjGFXeSmM",
+        "outputId": "da8c1b2f-6f3f-4d89-cc38-b4df231c165b"
       },
       "execution_count": 11,
       "outputs": [
