Colab を使用して作成されました

--- a/docs/class_02.ipynb
+++ b/docs/class_02.ipynb
@@ -1206,13 +1206,29 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## 5. テーマの割り当て"
+      ],
       "metadata": {
-        "id": "JuU3Ul-K1-yV"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "Bk71VFuHzEUj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "テーマA：最適化関数におけるMomentumの評価  \n",
+        "テーマB：学習率とバッチサイズの精度への影響評価  \n",
+        "テーマC：枝刈りによるモデルの性能低下の評価  \n",
+        "テーマD：量子化パラメータのモデル性能への影響  \n",
+        "テーマE：オートエンコーダによる画像のデノイジング  \n",
+        "テーマF：モデルの敵対的サンプルへの耐性評価  \n",
+        "テーマG：オートエンコーダを使った異常検知の分析  \n",
+        "テーマH：リプレイメモリによるモデルの忘却防止の評価  "
+      ],
+      "metadata": {
+        "id": "LOyGRBqtzLNE"
+      }
     }
   ],
   "metadata": {
