Colab を使用して作成されました

--- a/docs/class_01.ipynb
+++ b/docs/class_01.ipynb
@@ -36,7 +36,7 @@
       "source": [
         "## 取り組むテーマの例\n",
         "### 精度改善\n",
-        "- データ拡張手法の比較\n",
+        "- 最適化関数におけるMomentumの評価\n",
         "- 適切な学習率とバッチサイズの決定方法\n",
         "\n",
         "### モデルのパラメータ数削減\n",
@@ -45,9 +45,7 @@
         "\n",
         "### その他\n",
         "- オートエンコーダによるMNISTのデノイジング\n",
-        "- オートエンコーダによるMNISTの次元削減\n",
-        "- 敵対的サンプルへの耐性評価\n",
-        "- MNISTでのアンサンブル学習の評価"
+        "- 敵対的サンプルへの耐性評価"
       ],
       "metadata": {
         "id": "Xsaf5qm5WQOW"
