Colab を使用して作成されました

--- a/docs/theme_H_update.ipynb
+++ b/docs/theme_H_update.ipynb
@@ -178,7 +178,7 @@
         "id": "_sSiCHMgLB4v",
         "outputId": "1a00c90e-a653-41de-f531-e0886bc4c4bc"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,7 +302,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,7 +377,7 @@
         "# バッチサイズのリストと繰り返し回数を設定\n",
         "batch_sizes = [1, 4, 16, 64, 256]\n",
         "num_repeats = 5  # 同じバッチサイズで5回実行\n",
-        "replay_memory_size = 5000 # 50000まで\n",
+        "replay_memory_size = 5000 # 1から45000まで\n",
         "\n",
         "# 評価を実行\n",
         "results = evaluate_with_varied_batch_sizes(\n",
@@ -415,7 +415,7 @@
           "height": 651
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,7 +446,7 @@
       "metadata": {
         "id": "7GfrIamf2yCb"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     }
   ],
